<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubble_pink"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="-50dp"
        android:hint="Username"
        android:padding="12dp"
        android:background="@drawable/edittext_rounded"
        android:textColorHint="@color/new_blue"
        app:layout_constraintBottom_toTopOf="@+id/signupPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="277dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/edittext_rounded"
        android:textColorHint="@color/new_pink"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupUsername" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="268dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="SIGNUP"
        app:layout_constraintBottom_toTopOf="@+id/loginRedirect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginRedirect"
        android:text="Already registered? Login"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/red"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />


</androidx.constraintlayout.widget.ConstraintLayout>